# matrix-free-stuff

./: .gitignore  Cargo.toml  flake.nix
src/: main.rs  matrix.rs  utils.rs  webhook.rs
