[package]
name = "matrix-free-stuff"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
eyre = "0.6.12"
freestuffapi = { version = "0.1.3", default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
