[package]
name = "matrix-free-stuff"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
freestuffapi = { version = "0.1.3", default-features = false }
hyper = "0.14"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.33"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.axum]
version = "0.6.20"
features = [
  "macros"
]

[dependencies.ruma]
version = "0.9.4"
features = [
  "appservice-api",
  "client",
  "client-api",
  "client-hyper-native-tls",
]
